server/simulators/results/uninformed-bayesian/uninformed-bayesian-sim-err-15.txt
SyntaxError: Unexpected token u in JSON at position 0
    at JSON.parse (<anonymous>)
    at run (/Users/omeed/Desktop/OSU/grad/thesis/duo-clean/server/simulators/bayesian.ts:316:21)
    at processTicksAndRejections (node:internal/process/task_queues:93:5)

/Users/omeed/Desktop/OSU/grad/thesis/duo-clean/server/simulators/bayesian.ts:357
    fd_metadata.forEach((fd) => {
                ^
TypeError: vios is not iterable
    at /Users/omeed/Desktop/OSU/grad/thesis/duo-clean/server/simulators/bayesian.ts:378:27
    at Array.forEach (<anonymous>)
    at run (/Users/omeed/Desktop/OSU/grad/thesis/duo-clean/server/simulators/bayesian.ts:357:17)
    at processTicksAndRejections (node:internal/process/task_queues:93:5)
error Command failed with exit code 1.
